Přidat odkazy do RIUAN (obsahuje náhled do katastru)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <div class="wrapper">
-  <div class="row">
+  <section class="row">
     <h3 class="col col-sm-12">Kontakt</h3>
     <address class="col col-sm-12 col-lg-6"><span class="fa fa-building"></span><br/>Společenství vlastníků Opálkova 18, Brno<br/>
     Opálkova 759/18, Bystrc, 635 00 Brno</address>
@@ -30,25 +30,32 @@ layout: default
       {% endif %}
     {% endfor %}
     </ul>
-  </div>
+  </section>
   <section class="row">
-  <div class="col col-sm-12 col-lg-4">
+  <div class="col col-sm-12 col-lg-6">
     <h3>IČ: 29306809</h3>
 
     <p>S 9117 vedená u Krajského soudu v Brně</p>
   </div>
-  <div class="col col-sm-12 col-lg-4">
+  <div class="col col-sm-12 col-lg-6">
     <h3>Rejstříky</h3>
     <ul>
       <li><a href="https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=195525&typ=PLATNY">platné údaje</a></li>
       <li><a href="https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=195525&typ=UPLNY">kompletní historie</a></li>
     </ul>
   </div>
-  <div class="col col-sm-12 col-lg-4">
+  <div class="col col-sm-12 col-lg-6">
     <h3>Listiny</h3>
     <ul>
       <li><a href="https://or.justice.cz/ias/content/download?id=1801fc2e24c64531936b98f0f20c76c9">stanovy</a></li>
       <li><a href="https://or.justice.cz/ias/ui/vypis-sl-firma?subjektId=195525">všechny</a></li>
+    </ul>
+  </div>
+  <div class="col col-sm-12 col-lg-6">
+    <h3>Katastr</h3>
+    <ul>
+      <li><a href="http://vdp.cuzk.cz/vdp/ruian/stavebniobjekty/19142994">stavba</a></li>
+      <li><a href="http://vdp.cuzk.cz/vdp/ruian/parcely/1408169702">pozemek</a></li>
     </ul>
   </div>
   </section>
