Oprava odkazu na stanovy

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: default
   <div class="col col-sm-12 col-lg-6">
     <h3>Listiny</h3>
     <ul>
-      <li><a href="https://or.justice.cz/ias/content/download?id=1801fc2e24c64531936b98f0f20c76c9">stanovy</a></li>
+      <li><a href="https://or.justice.cz/ias/ui/vypis-sl-detail?dokument=47933766&subjektId=195525&spis=797689">stanovy</a></li>
       <li><a href="https://or.justice.cz/ias/ui/vypis-sl-firma?subjektId=195525">všechny</a></li>
     </ul>
   </div>
